--- a/PruebaYeisonLlanes/Views/Historico/Delete.cshtml
+++ b/PruebaYeisonLlanes/Views/Historico/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model PruebaYeisonLlanes.Models.Historicos
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Hsitorico";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar Historico</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Desea Eliminar el registro?</h3>
 <div>
     <h4>Historicos</h4>
     <hr />
@@ -24,16 +24,16 @@
             @Html.DisplayFor(model => model.Fecha)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUsuarioNavigation)
+            @Html.DisplayNameFor(model => model.IdUsuario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdUsuarioNavigation.IdUsuario)
+            @Html.DisplayFor(model => model.IdUsuario)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdHistorico" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn btn-warning">Regresar</a>
     </form>
 </div>
