--- a/PruebaYeisonLlanes/Views/Home/Index.cshtml
+++ b/PruebaYeisonLlanes/Views/Home/Index.cshtml
@@ -5,6 +5,27 @@
 <div class="text-center">
     <h1 class="display-4">Calculadora</h1>
 </div>
+<div class="PantallaCalculadora">
+
+</div>
 <div>
-    Aqui Diseño de la Calculadora
+    <div class="calculadora">
+        <button class="operador" data-action="adicion">+</button>
+        <button class="operador" data-action="subtract">-</button>
+        <button class="operador" data-action="multiply">&times;</button>
+        <button class="operador" data-action="divide">÷</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>0</button>
+        <button data-action="decimal">.</button>
+        <button data-action="clear">AC</button>
+        <button class="key--equal" data-action="calculate">=</button>
+    </div>
 </div>
