--- a/PruebaYeisonLlanes/Views/Shared/_Layout.cshtml
+++ b/PruebaYeisonLlanes/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - PruebaYeisonLlanes</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/calculadora.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PruebaYeisonLlanes.styles.css" asp-append-version="true" />
 </head>
 <body>
