Se realiza el manual de la aplicacion y se agrega al proyecto, se adiciona opcion para visualizacion dentro del aplicativo YLL

--- a/PruebaYeisonLlanes/Views/Operador/Index.cshtml
+++ b/PruebaYeisonLlanes/Views/Operador/Index.cshtml
@@ -16,10 +16,10 @@
                 @Html.DisplayNameFor(model => model.Operador)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdPrioridadNavigation)
+                @Html.DisplayNameFor(model => model.IdPrioridad)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdUbicacionNavigation)
+                @Html.DisplayNameFor(model => model.IdUbicacion)
             </th>
             <th></th>
         </tr>
