--- a/PruebaYeisonLlanes/Views/Shared/_Layout.cshtml
+++ b/PruebaYeisonLlanes/Views/Shared/_Layout.cshtml
@@ -31,10 +31,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ubicacion" asp-action="Index">Ubicaciones</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Operador" asp-action="Index">Operadores</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Historico" asp-action="Index">Historico Operaciones</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Log" asp-action="Index">Auditoria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Manual</a>
                         </li>
                     </ul>
                 </div>
