--- a/PruebaYeisonLlanes/Views/Home/Privacy.cshtml
+++ b/PruebaYeisonLlanes/Views/Home/Privacy.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Manual";
 }
-<h1>@ViewData["Title"]</h1>
+<div class="pdf">
+    <embed src="~/docs/Manual.pdf" type="application/pdf" width="100%" height="100%" />
+</div>
 
-<p>Use this page to detail your site's privacy policy.</p>
